Versão final da monografia

--- a/conclusao.tex
+++ b/conclusao.tex
@@ -2,8 +2,8 @@
 \label{c.conclusao}
 
 A questão do aprimoramento das técnicas de segurança de redes e de informação
-permanecerá relevante por muito tempo, em virtude do fato de que estamos
-inseridos em um mundo que cada vez mais produz e depende de tecnologia e também
+permanecerá relevante por muito tempo, em virtude do fato de que a sociedade
+está inserida em um mundo que cada vez mais produz e depende de tecnologia e também
 apresenta este mesmo comportamento quanto ao volume e à variedade de dados que
 trafegam pela \textit{internet}. Com os estudos levantados e uma análise do
 cenário atual da computação, pode-se afirmar que as técnicas estudadas e
@@ -12,7 +12,7 @@ chegando ao seu máximo, pois a manipulação de assinaturas de \textit{malware}
 implica características no processo de detecção que limitam uma possível
 abordagem com o uso de técnicas de programação mais inovadoras. Embora a
 eficácia das ferramentas atualmente empregadas seja satisfatória e as mesmas
-apresentem uma boa precisão de detecção, estamos sempre atuando num contexto do
+apresentem uma boa precisão de detecção, elas estão sempre atuando num contexto do
 que pode-se chamar de `pós-infecção' ou pelo menos de uma infecção iminente,
 onde os arquivos maliciosos já estão trafegando por pontos de rede ou até mesmo se encontram
 latentes dentro dos ambientes vulneráveis infiltrados, seja por estarem à espera de um
@@ -43,11 +43,11 @@ encontrados na \textit{internet}, ter um ponto de partida para conhecer essa
 área da computação e também tentar colocar um pouco desse conhecimento em
 prática de uma maneira colaborativa. O código-fonte do protótipo da aplicação
 encontra-se hospedado \href{https://github.com/ltgouvea/TCC }{neste
-repositório},  aberto para quaisquer desenvolvedores que queiram dar andamento
+repositório\footnote{https://github.com/ltgouvea/TCC}},  aberto para quaisquer desenvolvedores que queiram dar andamento
 ao projeto caso se interessem.
 
 Já há serviços de varredura de \textit{malware} gratuita disponíveis pela
-\textit{internet}, e podemos relacionar o estudo desenvolvido neste
+\textit{internet}, e pode-se relacionar o estudo desenvolvido neste
 projeto com outros projetos recentes como o de SUN et al (\citeyear{sun2012automated}),
 que propõe a ideia de  geração automática de assinaturas de \textit{malware} incorporando
 o mapeamento de características nocivas dentro do próprio sistema de armazenamento de arquivos
