--- a/introducao.tex
+++ b/introducao.tex
@@ -51,14 +51,17 @@ Dessa maneira, é possível exemplificar as técnicas de detecção com a figura
 \legend{\small Fonte: Elaborada pelo autor.}
 \end{figure}
 
-\chapter{Problema}
+Nesta seção do texto, ainda será explicado o problema que o projeto se propõe a resolver, os objetivos esperados para a implementação e a justificativa para o estudo que se desenvolveru no tema. No capítulo 2
+encontra-se todo o referencial teórico que permeia os conceitos de redes, segurança de redes, famílias de
+\textit{malware} e outros conceitos relacionados ao projeto. No capítulo 3 estão as informações sobre as ferramentas que foram utilizadas na fase de implementação, documentada no capítulo 4. O capítulo 5 conclui o texto com algumas considerações sobre estudos futuros e os resultados obtidos em vários aspectos do projeto.
+
+\section{Problema}
 \label{c.problema}
 
-Os dispositivos móveis atuais ainda não possuem capacidade computacional de
-sobra para que se façam varreduras constantes que utilizem as técnicas de
+Os dispositivos móveis atuais ainda não possuem capacidade computacional disponível para que se façam varreduras constantes que utilizem as técnicas de
 detecção dinâmicas em seus respectivos sistemas à procura de código malicioso,
 e com a abrangência da internet se tornando cada vez mais expressiva, o dano
-em potencial que um malware pode causar a um determinado indivíduo, ou ainda
+em potencial que um \textit{malware} pode causar a um determinado indivíduo, ou ainda
 em grupos massivos também torna-se mais preocupante. Sob a ótica de Szewczyk
 (\citeyear{szewczyk12}), as redes de computadores, principalmente sem fio, começam a apresentar
 problemas de vulnerabilidade a partir do momento da compra do \textit{hardware}
@@ -68,152 +71,52 @@ os equipamentos por si são capazes de blindar uma rede contra qualquer
 intrusão, a fim de obter sucesso comercial valendo-se da ingenuidade de
 usuários leigos no assunto de segurança de redes. As técnicas de detecção por
 assinatura, apesar de não serem as mais eficazes à disposição, são muito mais
-simples de se implementar e resolverem o problema da infecção por malwares
-conhecidos ou ainda malwares novos com características semelhantes às dos
+simples de se implementar e resolverem o problema da infecção por \textit{malwares}
+conhecidos ou ainda \textit{malwares} novos com características semelhantes às dos
 conhecidos.
 
+\section{Objetivos e justificativa}
+\label{s.objetivos}
+
+\subsection{Objetivo Geral}
+\label{s.objetivog}
+
+Analisar o resultado da ação de diferentes técnicas de detecção de \textit{malware}
+baseadas em assinatura num ambiente de testes para obter métricas relevantes
+quanto à eficiência nas varreduras realizadas, número de falsos positivos
+encontrados e se possível determinar qual delas é a mais apropriada para uso
+em ambientes \textit{mobile} e de redes de computadores em geral.
+ 
+\subsection{Objetivos Específicos}
+\label{s.ojetivosp}
+
+- Para embasar o projeto, foi levantado um histórico sobre segurança em redes
+  de computadores e assuntos correlacionados principalmente às técnicas de
+  detecção a serem estudadas.
+
+- Montar um ambiente para que ele seja populado com conjuntos de programas a
+  serem investigados e executar diferentes algoritmos para que posteriormente
+  classifiquem-se seus resultados. Por questões de relevância, o escopo do
+  trabalho envolverá sistemas \textit{Windows} e \textit{Android} pois a maioria dos usuários
+  comuns utiliza estes sistemas operacionais.
+
+- Comparar todos os métodos previamente escolhidos e testados para apresentar
+  suas respectivas características e desempenhos.
 
 
+\subsection{Justificativa}
+\label{s.justificativa}
 
-%DOCUMENTAÇÃO DO TEX PRA QUANDO DER AQUELE BRANCO FODA
-%
-%
-%Para iniciar a produção em .tex é necessário instalar os pacotes básicos da linguagem e seus compiladores. O %MiKTeX é um pacote básico para o Windows (miktex.org/download) e o MacTeX um pacote básico para o Mac (tug.org/%mactex) que contém o mínimo necessário de TeX/LaTeX para rodar. Ele já vem com os compiladores nativos da %linguagem e uma IDE (TeXworks, para edição do texto) que possui o compilador integrado.
-
-%
-
-%Normalmente é utilizado o modo pdfLaTeX + MakeIndex + BibTeX para compilar um arquivo .tex. Existem outros %formatos de compiladores, mas essa opção é capaz de gerar um .pdf automático após a compilação e ainda por cima %adicionar as funcionalidades do BibTeX (recursos para criação e montagem automática de fontes bibliográficas).
-
-%
-
-%Além disso, também é necessária a instalação do pacote abnTeX2. Esse tutorial https://github.com/abntex/abntex2/%wiki/Instalacao provém o passo a passo de como instalar cada componente do TeX, em qualquer sistema operacional (%Linux, Mac OS e Windows). Caso esteja utilizando o MiKTeX, ele é capaz de efetuar o download do pacote %automaticamente, apenas instale-o, abra o projeto.tex e compile-o, ele irá requisitar a autorização para baixar %automaticamente os pacotes que faltam para efetuar a compilação.
-
-%
-
-%Com tudo em mãos e o compilador funcionando, é hora de abrir o modelo (projeto.tex) e começar a escrever o %texto. É possível perceber no código a estrutura do arquivo e os campos possíveis de edição. Ao escrever o %texto, ele é escrito normalmente, sendo que existem diversos comandos para estilizá-lo, criar tabelas, figuras, %dentre outros. A seguir abordaremos os principais comandos e funções que podem ser utilizadas em um projeto %básico de TCC. Para outras funções e pacotes, procure no Google, a comunidade é ativa e provavelmente já deve %ter feito o que é de sua necessidade.
-
-%
-
-%O arquivo projeto.tex contém os pacotes e comandos básicos que definem a estrutura desse texto já no formato %requisitado pela ABNT. Dentro dele é possível ver que estamos importando outros dois arquivos .tex (introducao e %conclusao), ou seja, esses arquivos estão sendo basicamente concatenados com o comando ``input''. A divisão não %é necessária, mas pode ser que auxilie na escrita do texto  ao deixar as coisas mais separadas e organizadas, %não sendo um único arquivo cheio de linhas e linhas de código.
-
-%
-
-%\section{Modificadores de Texto}
-%\label{s.modificador}
-%
-%Os modificadores de texto mais simples utilizados são o negrito (``textbf'') \textbf{texto em negrito} e o %itálico (``emph'') \emph{texto em itálico}.
-%\textbf
-%
-%\section{Seções}
-%\label{s.citacoes}
-%
-%Seções podem ser criadas a partir do comando ``section'' e hierarquizadas abaixo do capítulo principal. É %possível referenciá-las, por exemplo, Seção~\ref{s.citacoes} corresponde a seção atual em que estamos. Já se %quisermos referenciar alguma outra coisa, é só utilizarmos o comando ``ref'' presente no código desse texto, por %exemplo, Capítulo~\ref{c.introducao}.
-%
-%\subsection{Subseções}
-%\label{ss.subsecao}
-%
-%Subseções também podem ser criadas com o comando ``subsection'' e referenciadas~\ref{ss.subsecao}.
-%
-%\subsubsection{Sub-subseções}
-%\label{sss.subsubsecao}
-%
-%Também há mais um nível que pode ser criado com o comando ``subsubsection''.
-%
-%\section{Alíneas}
-%\label{s.alineas}
-%
-%\begin{alineas}
-%
-%\item As alineas devem ser criadas desse modo, com o comando begin\{alineas\}. Isso é necessário para que %estejam no formato definido pelo pacote abnTeX2 e, consequentemente, no formato definido pela ABNT.
-%
-%\item Cada item da alínea pode ser invocado com um comando item.
-%
-%\item O fim de cada alínea é determinado por end\{alineas\}.
-%
-%\end{alineas}
-%
-%\section{Tabelas}
-%\label{s.tabelas}
-%
-%As tabelas também podem ser referenciadas como se fossem seções ou figuras, por exemplo, esta é a Tabela~\ref{t.t%ransacao_mercado}.
-%
-%\begin{table}[h]
-%\centering
-%\begin{tabular}{c|c}
-%\hline
-%\textbf{\small TID} & \textbf{\small Conjunto de Itens}\\\hline \hline
-%{\small 1} & {\small \{Pão, Leite\}}\\\hline
-%{\small 2} & {\small \{Pão, Fralda, Cerveja, Ovos\}}\\\hline
-%{\small 3} & {\small \{Leite, Fralda, Cerveja, Coca-Cola\}}\\\hline
-%{\small 4} & {\small \{Pão, Leite, Fralda, Cerveja\}}\\\hline
-%{\small 5} & {\small \{Pão, Leite, Fralda, Coca-Cola\}}\\\hline
-%\end{tabular}
-%\caption{Exemplo de transações de mercado.}
-%\label{t.transacao_mercado}
-%\end{table}
-%
-%Quando uma tabela é criada com begin\{table\}, ela é automaticamente adicionada à Lista de Tabelas.
-%
-%\section{Algoritmos}
-%\label{s.algoritmos}
-%
-%O pacote nicealgo incluído nos arquivos desse projeto é responsável por disponibilizar comandos extras, não %inerentes ao básico TeX, para a criação de algoritmos. Um exemplo do Algoritmo~\ref{a.algoritmo} é escrito a %seguir. Eles também pode ser referenciados como se fossem tabelas ou figuras.
-%
-%\begin{nicealgo}{a.algoritmo}
-%\naTITLE{Algoritmo AIS}
-%\naPREAMBLE
-%\naINPUT{Conjunto Frequente L = 0 e Grupo de Fronteira F = 0.}
-%\naBODY
-%\naBEGIN{\textbf{Enquanto} $F \neq 0$, \textbf{faça}}
-%\na{\textbf{Seja} conjunto candidato $C = 0$;}
-%\naBEGIN{\textbf{Para cada} tuplas $t$ da base de dados, \textbf{faça}}
-%\naBEGIN{\textbf{Para cada} conjuntos de itens $f$ em $F$, \textbf{faça}}
-%\naBEGIN{\textbf{Se} $t$ contém $f$, \textbf{então}}
-%\naEND{\textbf{Seja} $C_f =$ conjuntos de itens candidatos extensões de $f$ e contidos em $t$;}
-%\naBEGIN{\textbf{Para cada} conjunto de itens $c_f$ em $C_f$, \textbf{faça}}
-%\naBEGIN{\textbf{Se} $c_f \in C$, \textbf{então}}
-%\naEND{$c_f$.contagem $= c_f$.contagem$ + 1$;}
-%\naBEGIN{\textbf{Se não}}
-%\na{$c_f$.contagem $= 0$;}
-%\naEND{$C = C + c_f$;}
-%\naEND{}
-%\naEND{}
-%\naEND{}
-%\na{\textbf{Seja} F = 0;}
-%\naBEGIN{\textbf{Para cada} conjunto de itens $c$ em $C$, \textbf{faça}}
-%\naBEGIN{\textbf{Se} $contagem(c)/tamanho\_db > minsupport$, \textbf{então}}
-%\naEND{$L = L + c$;}
-%\naBEGIN{\textbf{Se} $c$ deve ser usado como a próxima fronteira, \textbf{então}}
-%\naEND{$F = F + c$;}
-%\naEND{}
-%\naEND{}
-%\end{nicealgo}
-%
-%\section{Figuras}
-%\label{s.figuras}
-%
-%Abaixo podemos identificar a criação e referência da Figura~\ref{f.disposicao_mercado}. Atente-se ao código para
-%perceber um possível redimensionamento com a função scale e o caminho de onde a figura deve ser retirada.
-%
-%Quando uma figura é criada com begin\{figure\}, ela é automaticamente adicionada à Lista de Ilustrações.
-%
-%\begin{figure}[h]
-%\caption{\small Exemplo do ambiente TeXworks.}
-%\centering
-%\includegraphics[scale=0.50]{figs/tex_exemplo.png}
-%\label{f.disposicao_mercado}
-%\legend{\small Fonte: Elaborada pelo autor.}
-%\end{figure}
-%
-%\section{Equações}
-%\label{s.equacoes}
-%
-%\section{Como citar as referências}
-%\label{ss.referencias}
-%
-%Aqui está um exemplo de como podemos referenciar as bibliografias utilizadas no trabalho. Elas são guardadas na %forma de metadados (tags) no arquivo .bib a qual é importada no projeto principal (projeto.tex).
-%
-%E podemos citá-las de acordo com os identificadores atribuídos para cada referência, por exemplo,~\cite{%stonebraker93} e~\cite{rocha09}.
-%
-%Após citar um item de referência bibliográfica com o comando ``cite'', ela será automaticamente padronizada e %incluída na página de Referências de seu arquivo. Atualmente os maiores sites portadores de artigos, periódicos,
-%dentre outros (IEEE, Springer, etc) já conseguem exportar a publicação desejado no formato BibTeX, sendo facilmente adicionado ao arquivo .bib de seu trabalho.
+O desenvolvimento de novas técnicas de segurança computacional, bem como a
+análise e aprimoramento de técnicas já construídas anteriormente, representam
+sempre um avanço na área de segurança de redes, pois todo tipo de sistema
+operacional possui alguma deficiência no quesito de segurança, haja visto que
+mesmo agências de inteligência como a NSA enfrentam de tempos em tempos
+problemas envolvendo vazamentos de dados e intrusões. De acordo com HASSAN (\citeyear{hassan10}), os tipos de ataque mais poderosos e bem
+sucedidos ocorrem de dentro da rede, pois em diversas situações, o
+administrador de rede confia em todos os usuários internos e não suspeita de
+ataques vindos de seu próprio lado. Por isso, é sempre um investimento
+desenvolver e manter uma política de aprimorar as defesas das redes de
+computadores. O contexto do projeto é o da esfera do usuário comum, que
+utiliza dispositivos comuns mas também é alvo de ataques que às vezes são
+menores e até inofensivos, que contudo, ocorrem com frequência.
