--- a/references.bib
+++ b/references.bib
@@ -70,6 +70,22 @@
     year = {2016}
 }
 
+@online{angularjs,
+    author = {Google},
+    title = {Angular JS Documentation},
+    note = {Acesso em 17/07/2016},
+    url = {https://angular.io/docs/ts/latest/},
+    year = {2016}
+}
+
+@online{laravel,
+    author = {OTWELL, T.},
+    title = {Laravel PHP framework},
+    note = {Acesso em 19/05/2016},
+    url = {https://laravel.com},
+    year = {2016}
+}
+
 @online{lenovosuperfish,
     author = {Lenovo},
     title = {Superfish Vulnerability.},
